# Theta-1-

./: emojis.py  keep_alive.py  main.py  places.py  prefix.json  pyproject.toml
Quests/: (A)redeem.json  (B)quest.json  (C)quest.json  (D)quest.json
cogs/: (-)SYSTEM.py  (-)staff.py  (C)income.py  (D)info.py  (E)shop.py  (Extra)ahmed.py  (F)actions.py  (F)actions2.py  (H)quest.py  (I)levels.py  logging.py  maintenance.py
currency files/: data
levels/: levels
