[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.22.2"
replit = "^3.2.4"
googletrans = "^3.0.0"
gTTS = "^2.2.4"
mutagen = "^1.45.1"
requests = "^2.28.1"
discord = "^2.0"
Flask = "^2.1.2"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"